--- a/index.html
+++ b/index.html
@@ -3,157 +3,163 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Business Intelligence Engineer</title>
+    <title>John Doe - BI Engineer Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
-        /* Previous CSS remains the same, add these new styles */
-        .competency-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1.5rem;
-            margin-top: 2rem;
+        :root {
+            --primary: #2A5C82;
+            --secondary: #5F9EA0;
+            --accent: #FF6B6B;
         }
 
-        .competency-card {
+        body {
+            font-family: 'Segoe UI', sans-serif;
             background: #f8f9fa;
-            padding: 1.5rem;
+        }
+
+        /* Hero Section */
+        .hero {
+            background: linear-gradient(135deg, var(--primary), var(--secondary));
+            color: white;
+            padding: 4rem 0;
+        }
+
+        /* Timeline */
+        .timeline {
+            position: relative;
+            padding: 50px 0;
+        }
+        .timeline::before {
+            content: '';
+            position: absolute;
+            left: 50%;
+            width: 2px;
+            height: 100%;
+            background: var(--primary);
+        }
+        .timeline-item {
+            position: relative;
+            margin: 40px 0;
+        }
+        .timeline-item:nth-child(odd) .timeline-content {
+            margin-left: auto;
+        }
+
+        /* Skill Matrix */
+        .skill-category {
+            padding: 1rem;
             border-radius: 8px;
-            border-left: 4px solid #3498db;
+            margin: 1rem 0;
         }
+        .skill-category.programming { background: rgba(42, 92, 130, 0.1); }
+        .skill-category.bi { background: rgba(95, 158, 160, 0.1); }
+        .skill-category.ds { background: rgba(255, 107, 107, 0.1); }
 
-        .certification-badge {
-            background: #e8f4ff;
-            border-radius: 20px;
-            padding: 0.5rem 1rem;
-            display: inline-block;
-            margin: 0.5rem;
-        }
-
+        /* Project Cards */
         .project-card {
-            background: white;
-            border: 1px solid #eee;
-            padding: 1.5rem;
-            margin-bottom: 1.5rem;
-            border-radius: 8px;
+            transition: transform 0.3s;
+            border: none;
+            border-radius: 12px;
+        }
+        .project-card:hover {
+            transform: translateY(-5px);
+        }
+
+        /* Section Headers */
+        .section-header {
+            border-left: 4px solid var(--primary);
+            padding-left: 1rem;
+            margin: 2rem 0;
         }
     </style>
 </head>
 <body>
-    <header>
-        <img src="your-photo.jpg" alt="John Doe" class="profile-img">
-        <h1>John Doe</h1>
-        <p>Business Intelligence Engineer | Data Strategy Leader</p>
-    </header>
-
-    <nav>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">JD</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
-    <section id="about">
-        <h2 class="section-title">Career Profile</h2>
-        <p>Business Intelligence Engineer with 8+ years of experience in data analysis, ETL pipelines, and data visualization. Proven track record of driving business insights, automating processes, and improving operational efficiency. Skilled in SQL, Python, Tableau, and Power BI. Seeking a Data/Product/Business Intelligence Manager role to leverage analytical expertise and leadership skills to drive strategic decision-making.</p>
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="container text-center">
+            <h1 class="display-4">John Doe</h1>
+            <p class="lead">Business Intelligence Engineer</p>
+            <div class="mt-4">
+                <a href="#contact" class="btn btn-light btn-lg">Contact Me</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Experience Timeline -->
+    <section id="experience" class="container timeline">
+        <h2 class="section-header">Professional Experience</h2>
         
-        <div class="competency-grid">
-            <div class="competency-card">
-                <h3>Core Competencies</h3>
-                <ul>
-                    <li>Data Analysis & Modeling</li>
-                    <li>Data Visualization & Reporting</li>
-                    <li>Business Process Automation</li>
-                    <li>Cross-functional Collaboration</li>
+        <!-- Repeat this block for each experience -->
+        <div class="timeline-item">
+            <div class="timeline-content card p-4" style="max-width: 500px;">
+                <h4>Business Solution Manager</h4>
+                <h5>Mainfreight Inc.</h5>
+                <small class="text-muted">March 2021 - November 2023</small>
+                <ul class="mt-3">
+                    <li>Led cross-functional team of 4 analysts</li>
+                    <li>Improved team productivity by 25%</li>
                 </ul>
             </div>
         </div>
     </section>
 
-    <section id="experience">
-        <h2 class="section-title">Professional Experience</h2>
+    <!-- Projects -->
+    <section id="projects" class="container py-5">
+        <h2 class="section-header">Projects</h2>
+        <div class="row g-4">
+            <div class="col-md-6">
+                <div class="project-card card h-100 p-4">
+                    <h4>Restaurant Visitors Forecasting</h4>
+                    <p>Automated data modeling & selection module in R</p>
+                    <div class="badge bg-primary">R</div>
+                    <div class="badge bg-secondary">Time Series</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Skills Matrix -->
+    <section id="skills" class="container py-5">
+        <h2 class="section-header">Technical Skills</h2>
         
-        <div class="timeline-item">
-            <h3>Business Solution Manager</h3>
-            <p>Mainfreight Inc., Carson | March 2021 - November 2023</p>
-            <ul>
-                <li>Led cross-functional team of 4 analysts, improving productivity by 25%</li>
-                <li>Redesigned BI products resulting in 15% increase in user adoption</li>
-                <li>Architected unified SQL Server database reducing data silos</li>
-            </ul>
-        </div>
-
-        <div class="timeline-item">
-            <h3>Business Intelligence Engineer</h3>
-            <p>Modern Gourmet Foods, Irvine | April 2019 - March 2021</p>
-            <ul>
-                <li>Automated 85% of reports, reducing manual effort by 40%</li>
-                <li>Implemented RPA reducing process time by 98%</li>
-                <li>Built real-time Tableau dashboards improving metric visibility by 25%</li>
-            </ul>
-        </div>
-
-        <!-- Add other experience entries similarly -->
-    </section>
-
-    <section id="skills">
-        <h2 class="section-title">Technical Skills</h2>
-        <div class="skills-grid">
-            <div class="skill-card" style="background-color: #e3f2fd;">
-                <h4>Programming</h4>
-                <p>Python, R, SQL, VBA</p>
-            </div>
-            <div class="skill-card" style="background-color: #f0f4c3;">
-                <h4>BI/ETL Tools</h4>
-                <p>Power BI, Tableau, KNIME, Kofax RPA</p>
-            </div>
-            <div class="skill-card" style="background-color: #ffcdd2;">
-                <h4>Data Science</h4>
-                <p>Scikit-learn, TensorFlow, NLP, Predictive Modeling</p>
+        <div class="skill-category programming">
+            <h4>Programming</h4>
+            <div class="d-flex flex-wrap gap-2">
+                <span class="badge bg-primary">Python</span>
+                <span class="badge bg-primary">SQL</span>
             </div>
         </div>
     </section>
 
-    <section id="projects">
-        <h2 class="section-title">Key Projects</h2>
-        <div class="project-card">
-            <h3>Recruit Restaurant Visitors Forecasting</h3>
-            <p>Developed automated data modeling module in R for Kaggle competition</p>
-        </div>
-        <div class="project-card">
-            <h3>Airbnb Pricing Prediction</h3>
-            <p>Implemented data models using MLR/KNN/CART in R and Excel</p>
-        </div>
-    </section>
-
-    <section id="education">
-        <h2 class="section-title">Education</h2>
-        <div class="timeline-item">
-            <h3>Master’s in Information Systems</h3>
-            <p>California State University, Fullerton | CGPA 3.7</p>
-        </div>
-        <div class="timeline-item">
-            <h3>Bachelor’s in Information Technology</h3>
-            <p>Anna University, Chennai</p>
+    <!-- Contact -->
+    <section id="contact" class="bg-light py-5">
+        <div class="container text-center">
+            <h2 class="section-header">Get in Touch</h2>
+            <div class="d-flex justify-content-center gap-3">
+                <a href="#" class="btn btn-primary"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                <a href="#" class="btn btn-dark"><i class="fab fa-github"></i> GitHub</a>
+            </div>
         </div>
     </section>
 
-    <section id="certifications">
-        <h2 class="section-title">Certifications</h2>
-        <div class="certification-badge">Tableau Certified</div>
-        <div class="certification-badge">KOFAX RPA Certified</div>
-        <div class="certification-badge">Cargowise Specialist</div>
-    </section>
-
-    <footer>
-        <p>Connect with me: 
-            <a href="#" style="color: white;">LinkedIn</a> | 
-            <a href="#" style="color: white;">GitHub</a> | 
-            <a href="#" style="color: white;">Kaggle</a>
-        </p>
-        <p>📧 john.doe@email.com | 📱 (123) 456-7890</p>
-    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
