--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container text-center">
-            <h1 class="display-4">John Doe</h1>
+            <h1 class="display-4">Aishwarya Murali</h1>
             <p class="lead">Business Intelligence Engineer</p>
             <div class="mt-4">
                 <a href="#contact" class="btn btn-light btn-lg">Contact Me</a>
@@ -119,7 +119,32 @@
                 </ul>
             </div>
         </div>
-    </section>
+
+<div class="timeline-item">
+            <div class="timeline-content card p-4" style="max-width: 500px;">
+                <h4>Business Intelligence Engineer</h4>
+                <h5>Modern Gourmet Foods</h5>
+                <small class="text-muted">March 2021 - November 2023</small>
+                <ul class="mt-3">
+                    <li>Led cross-functional team of 4 analysts</li>
+                    <li>Improved team productivity by 25%</li>
+                </ul>
+            </div>
+        </div>
+   
+
+    <div class="timeline-item">
+            <div class="timeline-content card p-4" style="max-width: 500px;">
+                <h4>Business Data Analyst</h4>
+                <h5>Tata Consultancy Services</h5>
+                <small class="text-muted">March 2021 - November 2023</small>
+                <ul class="mt-3">
+                    <li>Led cross-functional team of 4 analysts</li>
+                    <li>Improved team productivity by 25%</li>
+                </ul>
+            </div>
+        </div>
+
 
     <!-- Projects -->
     <section id="projects" class="container py-5">
